--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     });
             }, []);
 
-            const areasOppe = ['W21', 'P21/Mezz', 'C22', 'P22', 'P23', 'Boligkvarter'];
+            const areasOppe = ['W21', 'P21/Mezz', 'C22', 'P22', 'P23/Mezz', 'Boligkvarter'];
             const areasNede = ['P12', 'P11', 'W13', 'W12', 'W11', 'Z10', 'C12', 'C11'];
 
             // Funksjon for å håndtere område-valg
