--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             }, []);
 
             const areasOppe = ['W21', 'P21/Mezz', 'C22', 'P22', 'P23/Mezz', 'Boligkvarter'];
-            const areasNede = ['C12', 'W13', 'P12', 'W12', 'W11', 'P11', 'C11', 'Z10'];
+            const areasNede = ['C12', 'W13', 'P12', 'W12', 'W11', 'P11/Mezz', 'C11', 'Z10'];
 
             // Funksjon for å håndtere område-valg
             const selectArea = (area) => {
