--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="no">
+<!-- [Head-seksjonen forblir uendret] -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,21 +50,19 @@
             );
 
         const App = () => {
-            // State
+            // [State og effekter forblir uendret]
             const [tasks, setTasks] = React.useState(null);
             const [currentScreen, setCurrentScreen] = React.useState('welcome');
             const [selectedArea, setSelectedArea] = React.useState(null);
 
             // Last inn tasks fra CSV ved oppstart
             React.useEffect(() => {
-                // Først sjekk localStorage
                 const savedTasks = localStorage.getItem('osebergTasks');
                 if (savedTasks) {
                     setTasks(JSON.parse(savedTasks));
                     return;
                 }
 
-                // Hvis ingen data i localStorage, last fra CSV
                 fetch('tasks.csv')
                     .then(response => response.text())
                     .then(csv => {
@@ -72,7 +71,6 @@
                             skipEmptyLines: true
                         });
                         
-                        // Organiser data
                         const parsedTasks = {};
                         results.data.forEach(row => {
                             if (!parsedTasks[row.area]) {
@@ -96,18 +94,16 @@
             const areasOppe = ['W21', 'P21/Mezz', 'C22', 'P22', 'P23/Mezz', 'Boligkvarter'];
             const areasNede = ['C12', 'W13', 'P12', 'W12', 'W11', 'P11/Mezz', 'C11', 'Z10'];
 
-            // Funksjon for å håndtere område-valg
             const selectArea = (area) => {
                 setSelectedArea(area);
                 setCurrentScreen('tasks');
             };
 
-            // Funksjon for å gå til snake-spillet
             const goToSnakeGame = () => {
                 window.location.href = 'snake.html';
             };
 
-            // Funksjon for å toggle oppgaver
+            // [Andre funksjoner forblir uendret]
             const toggleTask = (area, category, id) => {
                 const newTasks = {
                     ...tasks,
@@ -122,7 +118,6 @@
                 localStorage.setItem('osebergTasks', JSON.stringify(newTasks));
             };
 
-            // Funksjon for å tilbakestille oppgaver
             const resetTasks = (area) => {
                 const newTasks = {
                     ...tasks,
@@ -137,7 +132,6 @@
                 localStorage.setItem('osebergTasks', JSON.stringify(newTasks));
             };
 
-            // Funksjon for å tilbakestille alle oppgaver
             const resetAllTasks = () => {
                 if (!tasks) return;
                 
@@ -156,14 +150,13 @@
                 localStorage.setItem('osebergTasks', JSON.stringify(newTasks));
             };
 
-            // Hvis data ikke er lastet ennå
             if (!tasks) {
                 return React.createElement('div', { 
                     className: 'flex items-center justify-center min-h-screen' 
                 }, 'Laster...');
             }
 
-            // Welcome screen
+            // Welcome screen - nå med Snake-spill knapp
             if (currentScreen === 'welcome') {
                 return React.createElement('div', { className: 'p-4 max-w-md mx-auto' },
                     React.createElement('div', { className: 'space-y-6' },
@@ -194,13 +187,17 @@
                         ),
                         React.createElement(Button, {
                             onClick: resetAllTasks,
-                            className: 'w-full bg-red-600 hover:bg-red-700'
-                        }, 'Tilbakestill alle oppgaver')
+                            className: 'w-full bg-red-600 hover:bg-red-700 mb-4'
+                        }, 'Tilbakestill alle oppgaver'),
+                        React.createElement('button', {
+                            onClick: goToSnakeGame,
+                            className: 'w-full bg-white text-black border-2 border-black rounded px-4 py-2 font-medium hover:bg-gray-100'
+                        }, 'Flesk og duppe spillet')
                     )
                 );
             }
 
-            // Tasks screen
+            // Tasks screen - nå uten Snake-spill knapp
             return React.createElement('div', { className: 'p-4 max-w-md mx-auto' },
                 React.createElement('div', { className: 'space-y-4' },
                     React.createElement('div', { className: 'flex items-center justify-between' },
@@ -228,12 +225,8 @@
                     ),
                     React.createElement(Button, {
                         onClick: () => resetTasks(selectedArea),
-                        className: 'w-full bg-yellow-600 hover:bg-yellow-700 mb-2'
-                    }, `Tilbakestill oppgaver for ${selectedArea}`),
-                    React.createElement('button', {
-                        onClick: goToSnakeGame,
-                        className: 'w-full bg-white text-black border-2 border-black rounded px-4 py-2 font-medium hover:bg-gray-100'
-                    }, 'Flesk og duppe spillet')
+                        className: 'w-full bg-yellow-600 hover:bg-yellow-700'
+                    }, `Tilbakestill oppgaver for ${selectedArea}`)
                 )
             );
         };
