--- a/snake.html
+++ b/snake.html
@@ -44,15 +44,22 @@
 
         .highscore-input {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.7);
+            display: none;
+            z-index: 2;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .highscore-content {
             background: rgba(255, 255, 255, 0.95);
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            display: none;
-            z-index: 2;
             text-align: center;
             min-width: 280px;
         }
@@ -77,7 +84,16 @@
             box-shadow: 0 0 0 2px rgba(0,122,255,0.2);
         }
 
-        .highscore-input button {
+        .button-group {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-top: 15px;
+        }
+
+        .button-group button {
+            flex: 1;
+            max-width: 120px;
             background: #007AFF;
             color: white;
             border: none;
@@ -85,12 +101,15 @@
             border-radius: 8px;
             font-size: 16px;
             cursor: pointer;
-            margin-top: 10px;
             transition: background-color 0.2s;
         }
 
-        .highscore-input button:hover {
-            background: #0066CC;
+        .button-group button.secondary {
+            background: #666;
+        }
+
+        .button-group button:hover {
+            opacity: 0.9;
         }
 
         .highscore-list {
@@ -121,10 +140,15 @@
 <body>
     <div class="watermark">Flesk og Duppe</div>
     <div id="highscoreInput" class="highscore-input">
-        <h2>Ny High Score!</h2>
-        <p>Dine poeng: <span id="finalScore">0</span></p>
-        <input type="text" id="nameInput" placeholder="Skriv ditt navn" maxlength="20">
-        <button onclick="saveHighScore()">Lagre Score</button>
+        <div class="highscore-content">
+            <h2>Ny High Score!</h2>
+            <p>Dine poeng: <span id="finalScore">0</span></p>
+            <input type="text" id="nameInput" placeholder="Skriv ditt navn" maxlength="20">
+            <div class="button-group">
+                <button onclick="saveHighScore()">Lagre Score</button>
+                <button onclick="skipHighScore()" class="secondary">Avbryt</button>
+            </div>
+        </div>
     </div>
     <div id="highscoreList" class="highscore-list">
         <h3>High Scores</h3>
@@ -176,8 +200,10 @@
             
             if (score > lowestScore || highScores.length < 5) {
                 document.getElementById('finalScore').textContent = score;
-                document.getElementById('highscoreInput').style.display = 'block';
+                document.getElementById('highscoreInput').style.display = 'flex';
                 document.getElementById('nameInput').focus();
+            } else {
+                startGame();
             }
         }
 
@@ -200,6 +226,12 @@
             document.getElementById('highscoreInput').style.display = 'none';
             document.getElementById('nameInput').value = '';
             updateHighScoreList();
+            startGame();
+        }
+
+        function skipHighScore() {
+            document.getElementById('highscoreInput').style.display = 'none';
+            startGame();
         }
 
         function createFood() {
@@ -257,10 +289,11 @@
         function moveSnake() {
             const head = {x: snake[0].x + dx, y: snake[0].y + dy};
             
-            if (head.x >= canvas.width) head.x = 0;
-            if (head.x < 0) head.x = canvas.width - GRID_SIZE;
-            if (head.y >= canvas.height) head.y = 0;
-            if (head.y < 0) head.y = canvas.height - GRID_SIZE;
+            // Veggkollisjon
+            if (head.x >= canvas.width || head.x < 0 || head.y >= canvas.height || head.y < 0) {
+                gameOver();
+                return;
+            }
 
             for (let i = 1; i < snake.length; i++) {
                 if (head.x === snake[i].x && head.y === snake[i].y) {
@@ -305,10 +338,13 @@
             score = 0;
             gameStarted = true;
             createFood();
-            document.getElementById('highscoreInput').style.display = 'none';
         }
 
         function handleTouch(e) {
+            if (document.getElementById('highscoreInput').style.display === 'flex') {
+                return;
+            }
+
             e.preventDefault();
             const touch = e.touches[0];
 
@@ -375,9 +411,14 @@
             requestAnimationFrame(gameLoop);
         }
 
+        // Event Listeners
         canvas.addEventListener('touchstart', handleTouch);
 
         document.addEventListener('keydown', (e) => {
+            if (document.getElementById('highscoreInput').style.display === 'flex') {
+                return;
+            }
+
             if (!gameStarted && e.code === 'Space') {
                 startGame();
                 return;
@@ -399,12 +440,22 @@
             }
         });
 
+        // Prevent touch events from bubbling through high score input
+        document.getElementById('highscoreInput').addEventListener('touchstart', (e) => {
+            e.stopPropagation();
+        });
+
+        document.getElementById('highscoreInput').addEventListener('mousedown', (e) => {
+            e.stopPropagation();
+        });
+
         document.getElementById('nameInput').addEventListener('keypress', (e) => {
             if (e.key === 'Enter') {
                 saveHighScore();
             }
         });
 
+        // Initialize
         updateHighScoreList();
         requestAnimationFrame(gameLoop);
     </script>
