--- a/snake.html
+++ b/snake.html
@@ -64,7 +64,7 @@
             min-width: 280px;
         }
 
-        .highscore-input h2 {
+        .highscore-content h2 {
             margin: 0 0 15px 0;
             color: #1d1d1f;
         }
@@ -82,6 +82,22 @@
         .highscore-input input:focus {
             border-color: #007AFF;
             box-shadow: 0 0 0 2px rgba(0,122,255,0.2);
+        }
+
+        .scores-container {
+            margin: 15px 0;
+            text-align: left;
+            padding: 15px;
+            background: rgba(0, 0, 0, 0.05);
+            border-radius: 8px;
+            font-size: 14px;
+            line-height: 1.5;
+        }
+
+        .scores-container h3 {
+            text-align: center;
+            margin: 0 0 10px 0;
+            color: #1d1d1f;
         }
 
         .button-group {
@@ -111,30 +127,6 @@
         .button-group button:hover {
             opacity: 0.9;
         }
-
-        .highscore-list {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 15px;
-            border-radius: 12px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            font-size: 14px;
-            z-index: 1;
-            min-width: 150px;
-        }
-
-        .highscore-list h3 {
-            margin: 0 0 10px 0;
-            color: #1d1d1f;
-            font-size: 16px;
-            text-align: center;
-        }
-
-        #scores {
-            line-height: 1.5;
-        }
     </style>
 </head>
 <body>
@@ -144,15 +136,15 @@
             <h2>Ny High Score!</h2>
             <p>Dine poeng: <span id="finalScore">0</span></p>
             <input type="text" id="nameInput" placeholder="Skriv ditt navn" maxlength="20">
+            <div class="scores-container">
+                <h3>High Scores</h3>
+                <div id="scores"></div>
+            </div>
             <div class="button-group">
                 <button onclick="saveHighScore()">Lagre Score</button>
                 <button onclick="skipHighScore()" class="secondary">Avbryt</button>
             </div>
         </div>
-    </div>
-    <div id="highscoreList" class="highscore-list">
-        <h3>High Scores</h3>
-        <div id="scores"></div>
     </div>
     <canvas id="gameCanvas"></canvas>
     <script>
@@ -202,6 +194,7 @@
                 document.getElementById('finalScore').textContent = score;
                 document.getElementById('highscoreInput').style.display = 'flex';
                 document.getElementById('nameInput').focus();
+                updateHighScoreList();
             } else {
                 startGame();
             }
@@ -225,7 +218,6 @@
             localStorage.setItem('snakeHighScores', JSON.stringify(highScores));
             document.getElementById('highscoreInput').style.display = 'none';
             document.getElementById('nameInput').value = '';
-            updateHighScoreList();
             startGame();
         }
 
@@ -289,7 +281,6 @@
         function moveSnake() {
             const head = {x: snake[0].x + dx, y: snake[0].y + dy};
             
-            // Veggkollisjon
             if (head.x >= canvas.width || head.x < 0 || head.y >= canvas.height || head.y < 0) {
                 gameOver();
                 return;
@@ -322,9 +313,7 @@
             ctx.font = 'bold 30px -apple-system';
             ctx.fillText('Game Over!', canvas.width / 2, canvas.height / 2 - 30);
             ctx.fillText(`Poeng: ${score}`, canvas.width / 2, canvas.height / 2 + 10);
-            ctx.font = '20px -apple-system';
-            ctx.fillText('Trykk på skjermen for å starte på nytt', canvas.width / 2, canvas.height / 2 + 50);
-
+            
             checkHighScore(score);
         }
 
@@ -411,16 +400,13 @@
             requestAnimationFrame(gameLoop);
         }
 
-        // Event Listeners
         canvas.addEventListener('touchstart', handleTouch);
 
         document.addEventListener('keydown', (e) => {
             if (document.getElementById('highscoreInput').style.display === 'flex') {
-                return;
-            }
-
-            if (!gameStarted && e.code === 'Space') {
-                startGame();
+                if (e.key === 'Enter') {
+                    saveHighScore();
+                }
                 return;
             }
 
@@ -437,10 +423,12 @@
                 case 'ArrowRight':
                     if (dx === 0) { dx = GRID_SIZE; dy = 0; }
                     break;
+                case 'Space':
+                    if (!gameStarted) startGame();
+                    break;
             }
         });
 
-        // Prevent touch events from bubbling through high score input
         document.getElementById('highscoreInput').addEventListener('touchstart', (e) => {
             e.stopPropagation();
         });
@@ -449,14 +437,6 @@
             e.stopPropagation();
         });
 
-        document.getElementById('nameInput').addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                saveHighScore();
-            }
-        });
-
-        // Initialize
-        updateHighScoreList();
         requestAnimationFrame(gameLoop);
     </script>
 </body>
