--- a/snake.html
+++ b/snake.html
@@ -176,6 +176,25 @@
             </div>
         </div>
     </div>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBpOFiyRiqi7vz6sg0vMbO6x9qxcQhy9v8",
+    authDomain: "oseberg-35480.firebaseapp.com",
+    projectId: "oseberg-35480",
+    storageBucket: "oseberg-35480.firebasestorage.app",
+    messagingSenderId: "285076007315",
+    appId: "1:285076007315:web:f61170b130ff2e1ea62066"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
     <canvas id="gameCanvas"></canvas>
     <script>
         const canvas = document.getElementById('gameCanvas');
