--- a/snake.html
+++ b/snake.html
@@ -29,6 +29,18 @@
             touch-action: none;
         }
 
+        .watermark {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: rgba(0, 0, 0, 0.1);
+            font-size: 80px;
+            font-weight: bold;
+            user-select: none;
+            pointer-events: none;
+        }
+
         .top-scores {
             position: fixed;
             top: 10px;
@@ -38,18 +50,9 @@
             border-radius: 8px;
             font-family: -apple-system, BlinkMacSystemFont, sans-serif;
             font-size: 14px;
-            text-align: left;
             z-index: 1;
             line-height: 1.5;
             min-width: 150px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .top-scores h3 {
-            margin: 0 0 5px 0;
-            text-align: center;
-            color: #1d1d1f;
-            font-size: 16px;
         }
 
         .highscore-input {
@@ -72,43 +75,10 @@
             text-align: center;
             min-width: 280px;
         }
-
-        .highscore-content h2 {
-            margin: 0 0 15px 0;
-            color: #1d1d1f;
-        }
-
-        .highscore-input input {
-            margin: 10px 0;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            font-size: 16px;
-            width: 200px;
-            outline: none;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-            margin-top: 15px;
-        }
-
-        .button-group button {
-            flex: 1;
-            max-width: 120px;
-            background: #007AFF;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
+    <div class="watermark">Flesk og Duppe</div>
     <div class="top-scores" id="topScores"></div>
     <div id="highscoreInput" class="highscore-input">
         <div class="highscore-content">
@@ -117,17 +87,15 @@
             <input type="text" id="nameInput" placeholder="Skriv ditt navn" maxlength="20">
             <div class="button-group">
                 <button onclick="saveHighScore()">Lagre Score</button>
-                <button onclick="skipHighScore()" class="secondary">Avbryt</button>
+                <button onclick="skipHighScore()">Avbryt</button>
             </div>
         </div>
     </div>
     <canvas id="gameCanvas"></canvas>
     <script type="module">
-        // Import Firebase
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
         import { getFirestore, collection, addDoc, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
 
-        // Firebase Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyBpOFiyRiqi7vz6sg0vMbO6x9qxcQhy9v8",
             authDomain: "oseberg-35480.firebaseapp.com",
@@ -137,13 +105,11 @@
             appId: "1:285076007315:web:f61170b130ff2e1ea62066"
         };
 
-        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
-
         let GRID_SIZE = 20;
         let snake = [{ x: 200, y: 200 }];
         let food = { x: 100, y: 100 };
@@ -152,28 +118,33 @@
         let score = 0;
         let gameStarted = false;
         let highScores = [];
+        let interval = 150; // Hastigheten på spillet
+
+        const baconImage = new Image();
+        baconImage.src = 'bacon.png'; // Sørg for at bildet eksisterer
+        const nilsImage = new Image();
+        nilsImage.src = 'nils.png'; // Sørg for at bildet eksisterer
 
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
 
         function drawSnake() {
-            ctx.fillStyle = 'green';
-            snake.forEach(segment => ctx.fillRect(segment.x, segment.y, GRID_SIZE, GRID_SIZE));
+            snake.forEach(segment => ctx.drawImage(nilsImage, segment.x, segment.y, GRID_SIZE, GRID_SIZE));
         }
 
         function drawFood() {
-            ctx.fillStyle = 'red';
-            ctx.fillRect(food.x, food.y, GRID_SIZE, GRID_SIZE);
+            ctx.drawImage(baconImage, food.x, food.y, GRID_SIZE, GRID_SIZE);
         }
 
         function moveSnake() {
             const head = { x: snake[0].x + dx, y: snake[0].y + dy };
             snake.unshift(head);
-
             if (head.x === food.x && head.y === food.y) {
                 score++;
-                food = { x: Math.floor(Math.random() * (canvas.width / GRID_SIZE)) * GRID_SIZE, 
-                         y: Math.floor(Math.random() * (canvas.height / GRID_SIZE)) * GRID_SIZE };
+                food = {
+                    x: Math.floor(Math.random() * (canvas.width / GRID_SIZE)) * GRID_SIZE,
+                    y: Math.floor(Math.random() * (canvas.height / GRID_SIZE)) * GRID_SIZE
+                };
             } else {
                 snake.pop();
             }
@@ -191,7 +162,6 @@
             drawSnake();
             drawFood();
             moveSnake();
-
             if (checkCollision()) {
                 gameStarted = false;
                 document.getElementById('finalScore').textContent = score;
@@ -200,53 +170,46 @@
         }
 
         function gameLoop() {
-            if (gameStarted) {
-                updateGame();
-            }
-            requestAnimationFrame(gameLoop);
+            if (gameStarted) updateGame();
+            setTimeout(gameLoop, interval);
         }
 
         async function fetchHighScores() {
-            try {
-                const q = query(
-                    collection(db, "highscores"),
-                    orderBy("score", "desc"),
-                    limit(10)
-                );
-                const querySnapshot = await getDocs(q);
-                highScores = querySnapshot.docs.map(doc => doc.data());
-                const topScoresDiv = document.getElementById('topScores');
-                topScoresDiv.innerHTML = '<h3>Topp 10</h3>' + highScores.map((score, i) => `${i + 1}. ${score.name}: ${score.score}`).join('<br>');
-            } catch (error) {
-                console.error("Error fetching high scores:", error);
-            }
+            const q = query(collection(db, "highscores"), orderBy("score", "desc"), limit(10));
+            const querySnapshot = await getDocs(q);
+            highScores = querySnapshot.docs.map(doc => doc.data());
+            const topScoresDiv = document.getElementById('topScores');
+            topScoresDiv.innerHTML = '<h3>Topp 10</h3>' + highScores.map((score, i) => `${i + 1}. ${score.name}: ${score.score}`).join('<br>');
         }
 
         async function saveHighScore() {
             const name = document.getElementById('nameInput').value.trim();
             if (!name) return;
-
-            try {
-                await addDoc(collection(db, "highscores"), { name, score, date: new Date().toISOString() });
-                fetchHighScores();
-            } catch (error) {
-                console.error("Error saving high score:", error);
-            }
-
+            await addDoc(collection(db, "highscores"), { name, score, date: new Date().toISOString() });
+            fetchHighScores();
             document.getElementById('highscoreInput').style.display = 'none';
+            resetGame();
+        }
+
+        function resetGame() {
             score = 0;
             snake = [{ x: 200, y: 200 }];
             dx = GRID_SIZE;
             dy = 0;
-            gameStarted = true;
+            gameStarted = false;
+            fetchHighScores();
         }
 
-        document.addEventListener('keydown', (e) => {
+        canvas.addEventListener('touchstart', () => {
+            if (!gameStarted) gameStarted = true;
+        });
+
+        document.addEventListener('keydown', e => {
             if (e.key === 'ArrowUp' && dy === 0) { dx = 0; dy = -GRID_SIZE; }
             if (e.key === 'ArrowDown' && dy === 0) { dx = 0; dy = GRID_SIZE; }
             if (e.key === 'ArrowLeft' && dx === 0) { dx = -GRID_SIZE; dy = 0; }
             if (e.key === 'ArrowRight' && dx === 0) { dx = GRID_SIZE; dy = 0; }
-            if (!gameStarted) { gameStarted = true; }
+            if (!gameStarted) gameStarted = true;
         });
 
         fetchHighScores();
